--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".activity.top.TopBarActivity">
-        </activity>
+        <activity android:name=".activity.top.TopBarActivity"></activity>
         <activity android:name=".activity.button.UnderLineBtnActivity">
-
+        </activity>
+        <activity android:name=".activity.resourcedrawable.ReaourceDrawableActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
